# sobel

./: README.md
sobel_cpp/: opencvtest.cpp  sobel.cpp
sobel_cpp/basic_cpp/: CMakeLists.txt  a.out  sobel_basic.cpp
sobel_cpp/built_in_opencv/: CMakeLists.txt
sobel_cpp/opencv/: CMakeLists.txt
sobel_py/: sobel_reference.ipynb
sobel_py/.ipynb_checkpoints/: sobel_reference-checkpoint.ipynb
